--- a/Enfoca/Features/Shared/SharedComponents.storyboard
+++ b/Enfoca/Features/Shared/SharedComponents.storyboard
@@ -116,5 +116,65 @@
             </objects>
             <point key="canvasLocation" x="1028" y="154"/>
         </scene>
+        <!--Listen View Controller-->
+        <scene sceneID="9NH-L6-a4A">
+            <objects>
+                <viewController storyboardIdentifier="ListenViewController" id="Bha-cF-WD0" customClass="ListenViewController" customModule="Enfoca" customModuleProvider="target" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="xxT-2s-Vvl"/>
+                        <viewControllerLayoutGuide type="bottom" id="Uxr-nR-eos"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="kVy-1k-EJg">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="DZu-Uw-l92">
+                                <rect key="frame" x="146" y="317.5" width="83" height="32"/>
+                                <fontDescription key="fontDescription" name="HelveticaNeue" family="Helvetica Neue" pointSize="17"/>
+                                <state key="normal" title="Listening...">
+                                    <color key="titleColor" red="0.33989286419999998" green="0.37534031270000001" blue="0.44183227419999999" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                </state>
+                                <connections>
+                                    <action selector="listenButtonToggle:" destination="Bha-cF-WD0" eventType="touchUpInside" id="gXG-lw-Pu2"/>
+                                </connections>
+                            </button>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="kV6-py-gCa" customClass="CheckMarkView" customModule="Enfoca" customModuleProvider="target">
+                                <rect key="frame" x="162.5" y="308.5" width="50" height="50"/>
+                                <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="50" id="I5B-ba-cQr"/>
+                                    <constraint firstAttribute="height" constant="50" id="YaA-AT-3nY"/>
+                                </constraints>
+                                <userDefinedRuntimeAttributes>
+                                    <userDefinedRuntimeAttribute type="boolean" keyPath="hideOutline" value="YES"/>
+                                    <userDefinedRuntimeAttribute type="color" keyPath="checkColor">
+                                        <color key="value" red="1" green="0.50619709199999996" blue="0.96769246610000004" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                    </userDefinedRuntimeAttribute>
+                                    <userDefinedRuntimeAttribute type="number" keyPath="thickness">
+                                        <real key="value" value="3"/>
+                                    </userDefinedRuntimeAttribute>
+                                </userDefinedRuntimeAttributes>
+                            </view>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstItem="DZu-Uw-l92" firstAttribute="centerX" secondItem="kVy-1k-EJg" secondAttribute="centerX" id="63h-x2-769"/>
+                            <constraint firstItem="DZu-Uw-l92" firstAttribute="centerY" secondItem="kVy-1k-EJg" secondAttribute="centerY" id="S9e-cY-ZMq"/>
+                            <constraint firstItem="kV6-py-gCa" firstAttribute="centerX" secondItem="kVy-1k-EJg" secondAttribute="centerX" id="edS-1e-d0W"/>
+                            <constraint firstItem="kV6-py-gCa" firstAttribute="centerY" secondItem="kVy-1k-EJg" secondAttribute="centerY" id="fW8-36-Yiy"/>
+                        </constraints>
+                    </view>
+                    <nil key="simulatedStatusBarMetrics"/>
+                    <freeformSimulatedSizeMetrics key="simulatedDestinationMetrics"/>
+                    <size key="freeformSize" width="375" height="667"/>
+                    <connections>
+                        <outlet property="checkMark" destination="kV6-py-gCa" id="54N-Ap-w2p"/>
+                        <outlet property="listenButton" destination="DZu-Uw-l92" id="zTs-fG-0NU"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="rzN-gJ-a9P" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="892" y="677.81109445277366"/>
+        </scene>
     </scenes>
 </document>
