admob support for full screen ads added.  Few tweaks to the quiz results ui too.

--- a/Enfoca/Features/Quiz/Quiz.storyboard
+++ b/Enfoca/Features/Quiz/Quiz.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="12121" systemVersion="16F73" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="k4X-WW-dV3">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="12121" systemVersion="16G29" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="k4X-WW-dV3">
     <device id="retina4_0" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
@@ -837,16 +837,14 @@
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 <constraints>
                                     <constraint firstItem="ZJ0-tE-Bz4" firstAttribute="centerX" secondItem="g5M-Ep-1vc" secondAttribute="centerX" id="AdZ-Y1-p9g"/>
-                                    <constraint firstItem="BWI-t1-rlJ" firstAttribute="top" secondItem="3hA-yu-uDz" secondAttribute="bottom" constant="20" id="D6d-4L-MFr"/>
                                     <constraint firstItem="BWI-t1-rlJ" firstAttribute="centerX" secondItem="g5M-Ep-1vc" secondAttribute="centerX" id="E7p-gq-Y08"/>
+                                    <constraint firstItem="BWI-t1-rlJ" firstAttribute="top" secondItem="3hA-yu-uDz" secondAttribute="bottom" constant="20" id="Hq3-dh-MSK"/>
+                                    <constraint firstAttribute="bottom" secondItem="BWI-t1-rlJ" secondAttribute="bottom" constant="23" id="Jv5-Nh-hrj"/>
                                     <constraint firstItem="B2T-9v-J3u" firstAttribute="top" secondItem="ZJ0-tE-Bz4" secondAttribute="bottom" constant="35" id="PET-G4-urD"/>
                                     <constraint firstItem="ZJ0-tE-Bz4" firstAttribute="top" secondItem="g5M-Ep-1vc" secondAttribute="top" constant="20" id="a2a-qq-VcZ"/>
                                     <constraint firstItem="B2T-9v-J3u" firstAttribute="centerX" secondItem="g5M-Ep-1vc" secondAttribute="centerX" id="kR1-1e-I1N"/>
                                     <constraint firstItem="ZJ0-tE-Bz4" firstAttribute="width" secondItem="ZJ0-tE-Bz4" secondAttribute="height" multiplier="1:1" id="qLu-eH-d6z"/>
                                     <constraint firstItem="3hA-yu-uDz" firstAttribute="centerX" secondItem="g5M-Ep-1vc" secondAttribute="centerX" id="xOD-oW-zCe"/>
-                                    <constraint firstItem="BWI-t1-rlJ" firstAttribute="top" secondItem="ZJ0-tE-Bz4" secondAttribute="bottom" constant="221" id="zai-LS-TEK">
-                                        <variation key="heightClass=regular-widthClass=compact" constant="175"/>
-                                    </constraint>
                                 </constraints>
                             </view>
                         </subviews>
@@ -909,7 +907,7 @@
                                 <rect key="frame" x="0.0" y="100" width="320" height="468"/>
                                 <subviews>
                                     <stackView opaque="NO" contentMode="scaleToFill" spacing="10" translatesAutoresizingMaskIntoConstraints="NO" id="BKX-rJ-twc">
-                                        <rect key="frame" x="108" y="235" width="105" height="47"/>
+                                        <rect key="frame" x="108" y="230" width="105" height="47"/>
                                         <subviews>
                                             <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" translatesAutoresizingMaskIntoConstraints="NO" id="8N5-Ia-Kac">
                                                 <rect key="frame" x="0.0" y="0.0" width="72.5" height="47"/>
@@ -948,7 +946,7 @@
                                         </subviews>
                                     </stackView>
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="2TX-oX-aG4" customClass="EnfocaButton" customModule="Data_Import" customModuleProvider="target">
-                                        <rect key="frame" x="90" y="406" width="140" height="50"/>
+                                        <rect key="frame" x="90" y="398" width="140" height="50"/>
                                         <color key="backgroundColor" red="0.7534174919128418" green="0.73358726501464844" blue="0.71666222810745239" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                         <constraints>
                                             <constraint firstAttribute="width" constant="163" id="59v-Y6-N9Q">
@@ -969,7 +967,7 @@
                                         </connections>
                                     </button>
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="8bs-lc-Sms" customClass="EnfocaButton" customModule="Data_Import" customModuleProvider="target">
-                                        <rect key="frame" x="90" y="340" width="140" height="50"/>
+                                        <rect key="frame" x="90" y="332" width="140" height="50"/>
                                         <color key="backgroundColor" red="0.63423907759999998" green="0.66157263519999998" blue="0.73217785359999998" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                         <constraints>
                                             <constraint firstAttribute="width" constant="163" id="Eq6-P2-fbh">
@@ -990,7 +988,7 @@
                                         </connections>
                                     </button>
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="VJZ-Qp-WOP">
-                                        <rect key="frame" x="98.5" y="290" width="124" height="30"/>
+                                        <rect key="frame" x="98.5" y="286" width="124" height="30"/>
                                         <state key="normal" title="Show Quiz Details">
                                             <color key="titleColor" red="0.33989286419999998" green="0.37534031270000001" blue="0.44183227419999999" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                         </state>
@@ -1011,10 +1009,10 @@
                                 <constraints>
                                     <constraint firstItem="BKX-rJ-twc" firstAttribute="centerX" secondItem="3dO-lp-ZoK" secondAttribute="centerX" id="2qd-RY-PxB"/>
                                     <constraint firstItem="aj0-w2-n4E" firstAttribute="top" secondItem="3dO-lp-ZoK" secondAttribute="top" constant="20" id="52c-we-ulo"/>
-                                    <constraint firstItem="BKX-rJ-twc" firstAttribute="top" secondItem="3dO-lp-ZoK" secondAttribute="top" constant="235" id="67Y-3L-S62"/>
-                                    <constraint firstItem="8bs-lc-Sms" firstAttribute="top" secondItem="aj0-w2-n4E" secondAttribute="bottom" constant="120" id="LCZ-qK-7yv"/>
-                                    <constraint firstItem="8bs-lc-Sms" firstAttribute="top" secondItem="VJZ-Qp-WOP" secondAttribute="bottom" constant="20" id="SHr-Qy-KfQ"/>
+                                    <constraint firstItem="BKX-rJ-twc" firstAttribute="top" secondItem="3dO-lp-ZoK" secondAttribute="top" constant="230" id="67Y-3L-S62"/>
+                                    <constraint firstItem="8bs-lc-Sms" firstAttribute="top" secondItem="VJZ-Qp-WOP" secondAttribute="bottom" constant="16" id="IjP-wa-rDd"/>
                                     <constraint firstItem="8bs-lc-Sms" firstAttribute="centerX" secondItem="2TX-oX-aG4" secondAttribute="centerX" id="VzE-SD-13V"/>
+                                    <constraint firstAttribute="bottom" secondItem="2TX-oX-aG4" secondAttribute="bottom" constant="20" id="Xbt-Es-5oR"/>
                                     <constraint firstItem="aj0-w2-n4E" firstAttribute="centerX" secondItem="3dO-lp-ZoK" secondAttribute="centerX" id="Zmv-3T-RrL"/>
                                     <constraint firstItem="2TX-oX-aG4" firstAttribute="centerX" secondItem="3dO-lp-ZoK" secondAttribute="centerX" id="gK1-jc-fuO"/>
                                     <constraint firstItem="VJZ-Qp-WOP" firstAttribute="centerX" secondItem="BKX-rJ-twc" secondAttribute="centerX" id="rqa-DW-bbf"/>
@@ -1071,8 +1069,8 @@
     </resources>
     <inferredMetricsTieBreakers>
         <segue reference="oQB-FF-xDm"/>
-        <segue reference="Qlk-Ng-Knz"/>
-        <segue reference="7OF-2a-AVh"/>
-        <segue reference="1jO-wh-KqA"/>
+        <segue reference="rGV-qo-zJg"/>
+        <segue reference="Ixi-5y-OaF"/>
+        <segue reference="O0C-w6-pIy"/>
     </inferredMetricsTieBreakers>
 </document>
