--- a/Enfoca/Features/Quiz/Quiz.storyboard
+++ b/Enfoca/Features/Quiz/Quiz.storyboard
@@ -895,7 +895,7 @@
                                         <nil key="highlightedColor"/>
                                     </label>
                                 </subviews>
-                                <color key="backgroundColor" red="0.33989286419999998" green="0.37534031270000001" blue="0.44183227419999999" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                <color key="backgroundColor" red="0.3411764705882353" green="0.37647058823529411" blue="0.44313725490196076" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 <constraints>
                                     <constraint firstAttribute="trailing" secondItem="4vd-G3-ZnR" secondAttribute="trailing" constant="48" id="7UL-aw-dnD"/>
                                     <constraint firstAttribute="height" constant="100" id="AR1-2C-sXH"/>
@@ -1069,8 +1069,8 @@
     </resources>
     <inferredMetricsTieBreakers>
         <segue reference="oQB-FF-xDm"/>
+        <segue reference="Owj-22-ncO"/>
+        <segue reference="1jO-wh-KqA"/>
         <segue reference="rGV-qo-zJg"/>
-        <segue reference="Ixi-5y-OaF"/>
-        <segue reference="O0C-w6-pIy"/>
     </inferredMetricsTieBreakers>
 </document>
